--- a/application.html
+++ b/application.html
@@ -719,3 +719,347 @@ Log session start time Mon Mar 25 11:07:44 GMT 2024<br>
 <td>Hooks.java:40</td>
 <td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
 </tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 11:59:35 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>135</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+</table>
+<br>
+</body></html><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 11:59:36 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>948</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>1071</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 12:00:12 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>9462</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+</table>
+<br>
+</body></html><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 12:00:22 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>10377</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>37123</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 12:01:40 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>25333</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:43</td>
+<td title="Message">Test Pass List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+</table>
+<br>
+</body></html><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 12:02:07 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>26433</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>58782</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 12:04:55 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>24618</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:43</td>
+<td title="Message">Test Pass List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+</table>
+<br>
+</body></html><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Application log</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Mar 25 12:05:21 GMT 2024<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>25645</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:27</td>
+<td title="Message">Test Started --&gt; List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
+
+<tr>
+<td>55247</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="org.amazon.stepdefs.Hooks category">org.amazon.stepdefs.Hooks</td>
+<td>Hooks.java:41</td>
+<td title="Message">Test failed List all the Samsung phones with specification as Camera Resolution - 20 MP and above, Model Year – 2023 &amp; Price Range between £200 - £250</td>
+</tr>
